# DSBExec

./: .cirrus.yml  CMakeLists.txt  LICENSE  README  README.adoc  README.md  defs.h.in  dsbexec.desktop  dsbexec.pro  readme.mdoc
lib/: libdsbexec.c  libdsbexec.h
lib/qt-helper/: qt-helper.cpp  qt-helper.h
locale/: dsbexec_de.ts  dsbexec_fr.ts
src/: main.cpp  mainwin.cpp  mainwin.h
